Make implementations consistent across platforms:  ensure IsDirectory and IsFile return false even when the file doesn't exist (and they return an nsresult error status).  b=187014  r=dougt  sr=alecf