xpcom/io/nsLocalFileUnix.cpp
@@ -1291,6 +1291,7 @@ NS_IMETHODIMP
 nsLocalFile::IsDirectory(PRBool *_retval)
 {
     NS_ENSURE_ARG_POINTER(_retval);
+    *_retval = PR_FALSE;
     VALIDATE_STAT_CACHE();
     *_retval = S_ISDIR(mCachedStat.st_mode);
     return NS_OK;
@@ -1300,6 +1301,7 @@ NS_IMETHODIMP
 nsLocalFile::IsFile(PRBool *_retval)
 {
     NS_ENSURE_ARG_POINTER(_retval);
+    *_retval = PR_FALSE;
     VALIDATE_STAT_CACHE();
     *_retval = S_ISREG(mCachedStat.st_mode);
     return NS_OK;
